tests/baselines/reference/genericConstraint3.errors.txt
==== tests/cases/compiler/genericConstraint3.ts (1 errors) ====
    interface C<P> { x: P; }
    interface A<T, U extends C<T>> { x: U; }
                   ~~~~~~~~~~~~~~
!!! genericConstraint3.ts(2,16): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    interface B extends A<{}, { x: {} }> { } // Should not produce an error